Updated the project image width to fix distortion

--- a/src/pages/styles/home.css
+++ b/src/pages/styles/home.css
@@ -258,6 +258,7 @@
 }
 
 .third_section .projects .project ul {
+  max-width: 50%;
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -323,7 +324,8 @@
 }
 
 .third_section .projects .project a img {
-  max-width: 700px;
+  max-width: 100%;
+  height: auto;
   border-radius: 40px;
 }
 
@@ -381,19 +383,20 @@
 }
 
 @media screen and (max-width: 1500px) {
+  .third_section {
+    padding: 0 2rem;
+    margin: 0;
+  }
   .third_section .skills ul {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 
   .third_section .projects .project_desc {
+    padding: 0;
     gap: 3rem;
   }
   .third_section .projects .project_desc ul {
     max-width: 40%;
-  }
-  .third_section .projects .project a img {
-    max-width: 550px;
-    min-height: 300px;
   }
 }
 
@@ -435,6 +438,11 @@
   .project_desc ul li {
     margin-bottom: 0.5rem; /* Add some spacing between each li element */
   }
+
+  .third_section .projects .project a img {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 @media screen and (max-width: 1028px) {
@@ -446,11 +454,6 @@
   .home_main .first_section .developer_image {
     top: 8rem;
   }
-
-  .third_section {
-    padding-top: 6rem;
-    padding-left: 8rem;
-  }
 }
 
 @media screen and (max-width: 978px) {
@@ -458,8 +461,7 @@
     padding: 2px;
   }
   .third_section {
-    padding-top: 10rem;
-    padding-left: 6rem;
+    padding: 0;
   }
 
   .third_section .container {
